# daily-grind

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  hello  hello.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: disabled-github-actions.yml
.github/workflows/: github-actions.yml
ci/templates/.github/workflows/: github-actions.yml
docs/: config.md
src/daily_grind/: __init__.py  __main__.py  cli.py  config.py  constants.py  hello.py
tests/: test_daily_grind.py
